// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 Snapshots should apply custom styles to H1 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 20,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H1 Snapshots should render an H1 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#4A4A4A",
      "fontSize": 20,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H1 Snapshots should render an H1 with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#2196F3",
      "fontSize": 20,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H2 Snapshots should apply custom styles to H2 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 18,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H2 Snapshots should render an H2 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 18,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H2 Snapshots should render an H2 with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#2196F3",
      "fontSize": 18,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H3 Snapshots should apply custom styles to H3 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 16,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H3 Snapshots should render an H3 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 16,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H3 Snapshots should render an H3 with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#2196F3",
      "fontSize": 16,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H4 Snapshots should apply custom styles to H4 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 14,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H4 Snapshots should render an H4 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 14,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H4 Snapshots should render an H4 with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#2196F3",
      "fontSize": 14,
      "fontWeight": "500",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H5 Snapshots should apply custom styles to H5 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 12,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H5 Snapshots should render an H5 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 12,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`H5 Snapshots should render an H5 with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#2196F3",
      "fontSize": 12,
      "fontWeight": "600",
    }
  }
>
  Hi there!
</Text>
`;

exports[`Text Snapshots should apply custom styles to Text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "green",
      "fontSize": 14,
      "fontWeight": "400",
    }
  }
>
  Hi there!
</Text>
`;

exports[`Text Snapshots should render an Text 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 14,
      "fontWeight": "400",
    }
  }
>
  Hi there!
</Text>
`;

exports[`Text Snapshots should render an Text with color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#757575",
      "fontSize": 14,
      "fontWeight": "400",
    }
  }
>
  Hi there!
</Text>
`;
